objects/HospitalAdministrator__c.object
<CustomObject>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>Hospital</label>
        <referenceTo>Hospital__c</referenceTo>
        <relationshipLabel>HospitalAdministrators</relationshipLabel>
        <relationshipName>HospitalAdministrators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>HospitalAdministrator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Full_View_All_Info</fullName>
        <columns>NAME</columns>
        <columns>UserName__c</columns>
        <columns>Password__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Hospital__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full View All Info</label>
    </listViews>
    <nameField>
        <displayFormat>HospAdmin-{00000000}</displayFormat>
        <label>HospitalAdministrator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HospitalAdministrators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>